# solana-stablecoin-standard

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  PLAN.md  README.md  Trident.toml  package-lock.json  package.json  run_cli_tests.sh  tsconfig.json
backend/: .env.example  Dockerfile  docker-compose.yml  package.json
backend/src/: config.ts  main.ts
backend/src/routes/: index.ts
backend/src/services/: compliance.ts  event-listener.ts  mint-burn.ts  webhook.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  ORACLE.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AdminPanel.tsx  Navbar.tsx  StatCard.tsx  WalletProvider.tsx
frontend/src/hooks/: useAdminActions.ts  useStablecoin.ts
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/stablecoin/src/instructions/: add_to_allowlist.rs  add_to_blacklist.rs  burn.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  remove_from_allowlist.rs  remove_from_blacklist.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_minter.rs  update_roles.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: error.rs  lib.rs  state.rs
sdk/core/: package.json  tsconfig.json
sdk/core/src/: cli.ts  index.ts  oracle.ts  pda.ts  presets.ts  stablecoin.ts  tui.ts  types.ts
sdk/idl/: stablecoin.json  stablecoin.ts  transfer_hook.json  transfer_hook.ts
tests/: compliance.ts  edge-cases.ts  full-lifecycle.ts  roles.ts  sss-1.ts  sss-2.ts  sss-3.ts  token-extensions.ts
trident-tests/fuzz_tests/: Cargo.toml
trident-tests/fuzz_tests/fuzz_0/: accounts_snapshots.rs  fuzz_instructions.rs  test_fuzz.rs
