[package]
name = "stablecoin"
version = "0.1.0"
description = "Solana Stablecoin Standard — modular stablecoin program with SSS-1 and SSS-2 presets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "token_2022", "token_2022_extensions"] }
spl-token-metadata-interface = "0.6.0"
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-pod = { workspace = true }
spl-type-length-value = { workspace = true }
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
